# scientific-rag-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
reports/: retrieval_benchmark_results.json
scripts/: ask.py  ask_bm25.py  ask_hybrid.py  ask_simple.py  build_chunks.py  build_embeddings.py  evaluate.py  evaluate_retrievers.py  ingest_papers.py  run_pipeline.py
src/scientific_rag/chunking/: text_chunker.py
src/scientific_rag/embeddings/: local_embedder.py
src/scientific_rag/evaluation/: retrieval_metrics.py
src/scientific_rag/generation/: grounded_generator.py
src/scientific_rag/ingestion/: pdf_extractor.py
src/scientific_rag/retrieval/: bm25_retriever.py  hybrid_retriever.py  simple_retriever.py
src/scientific_rag_assistant/: __init__.py
tests/: test_bm25_retriever.py  test_grounded_generator.py  test_pdf_extractor.py  test_retrieval_metrics.py  test_simple_retriever.py  test_text_chunker.py
