[project]
name = "scientific-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Massimiliano Fraire", email = "massimilianofraire@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
scientific-rag-assistant = "scientific_rag_assistant:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
