[project]
name = "scientific-rag-assistant"
version = "0.1.0"
description = "A lightweight retrieval pipeline for querying scientific papers with dense, BM25, and hybrid retrievers."
readme = "README.md"
authors = [
    { name = "Massimiliano Fraire", email = "massimilianofraire@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pymupdf>=1.27.2.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []